crates/pgls_completions/src/snapshots/pgls_completions__test_helper__filters_out_by_aliases_in_join_on.snap
---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
---
***Setup***

create schema auth;

create table auth.users (
    uid serial primary key,
    name text not null,
    email text unique not null
);

create table auth.posts (
    pid serial primary key,
    user_id int not null references auth.users(uid),
    title text not null,
    content text,
    created_at timestamp default now()
);


--------------

select u.id, p.content from auth.users u join auth.posts p |
select u.id, p.content from auth.users u join auth.posts p o|
select u.id, p.content from auth.users u join auth.posts p on |
**Should prefer primary indices here.**

Results:
p.pid - auth.posts.pid (Column)
u.uid - auth.users.uid (Column)
p.content - auth.posts.content (Column)
p.created_at - auth.posts.created_at (Column)
u.email - auth.users.email (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.|

Results:
uid - auth.users.uid (Column)
email - auth.users.email (Column)
name - auth.users.name (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.i|

Results:
uid - auth.users.uid (Column)
email - auth.users.email (Column)
name - auth.users.name (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.id |

Results:
p.pid - auth.posts.pid (Column)
u.uid - auth.users.uid (Column)
p.content - auth.posts.content (Column)
p.created_at - auth.posts.created_at (Column)
u.email - auth.users.email (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.id = |

Results:
p.pid - auth.posts.pid (Column)
u.uid - auth.users.uid (Column)
p.content - auth.posts.content (Column)
p.created_at - auth.posts.created_at (Column)
u.email - auth.users.email (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.id = p.|
**We should only get columns from the auth.posts table.**

Results:
pid - auth.posts.pid (Column)
content - auth.posts.content (Column)
created_at - auth.posts.created_at (Column)
title - auth.posts.title (Column)
user_id - auth.posts.user_id (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.id = p.u|

Results:
user_id - auth.posts.user_id (Column)
pid - auth.posts.pid (Column)
content - auth.posts.content (Column)
created_at - auth.posts.created_at (Column)
title - auth.posts.title (Column)

--------------

select u.id, p.content from auth.users u join auth.posts p on u.id = p.user_id |

Results:
p.pid - auth.posts.pid (Column)
u.uid - auth.users.uid (Column)
p.content - auth.posts.content (Column)
p.created_at - auth.posts.created_at (Column)
u.email - auth.users.email (Column)

--------------
