crates/pgls_completions/src/snapshots/pgls_completions__test_helper__filters_out_by_aliases_in_select.snap
---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
---
s| from auth.users u join auth.posts p on u.id = p.user_id;
select | from auth.users u join auth.posts p on u.id = p.user_id;

Results:
p.content - auth.posts.content (Column)
p.created_at - auth.posts.created_at (Column)
u.email - auth.users.email (Column)
u.name - auth.users.name (Column)
p.pid - auth.posts.pid (Column)

--------------

select u.| from auth.users u join auth.posts p on u.id = p.user_id;

Results:
email - auth.users.email (Column)
name - auth.users.name (Column)
uid - auth.users.uid (Column)

--------------

select u.i| from auth.users u join auth.posts p on u.id = p.user_id;

Results:
email - auth.users.email (Column)
uid - auth.users.uid (Column)
name - auth.users.name (Column)

--------------

select u.id, | from auth.users u join auth.posts p on u.id = p.user_id;

Results:
p.content - auth.posts.content (Column)
p.created_at - auth.posts.created_at (Column)
u.email - auth.users.email (Column)
u.name - auth.users.name (Column)
p.pid - auth.posts.pid (Column)

--------------

select u.id, p.| from auth.users u join auth.posts p on u.id = p.user_id;
**We should only get columns from the auth.posts table.**

Results:
content - auth.posts.content (Column)
created_at - auth.posts.created_at (Column)
pid - auth.posts.pid (Column)
title - auth.posts.title (Column)
user_id - auth.posts.user_id (Column)

--------------

select u.id, p.p| from auth.users u join auth.posts p on u.id = p.user_id;
**We should only get columns from the auth.posts table.**

Results:
pid - auth.posts.pid (Column)
content - auth.posts.content (Column)
created_at - auth.posts.created_at (Column)
title - auth.posts.title (Column)
user_id - auth.posts.user_id (Column)

--------------

select u.id, p.pid | from auth.users u join auth.posts p on u.id = p.user_id;
