crates/pgls_completions/src/snapshots/pgls_completions__test_helper__shows_multiple_columns_if_no_relation_specified.snap
---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
snapshot_kind: text
---
***Setup***

create schema private;

create table public.users (
    id serial primary key,
    name text
);

create table public.audio_books (
    id serial primary key,
    narrator text
);

create table private.audio_books (
    id serial primary key,
    narrator_id text
);


--------------

s|
select |
**Should suggest all columns with n first**

Results:
id - public.audio_books.id (Column)
name - public.users.name (Column)
narrator - public.audio_books.narrator (Column)
id - private.audio_books.id (Column)
narrator_id - private.audio_books.narrator_id (Column)

--------------

select n|
**Should suggest all columns with n first**

Results:
name - public.users.name (Column)
narrator - public.audio_books.narrator (Column)
narrator_id - private.audio_books.narrator_id (Column)
name - Schema: pg_catalog.name (Function)
nameconcatoid - Schema: pg_catalog.nameconcatoid (Function)

--------------

select narrator_id |
