crates/pgls_completions/src/snapshots/pgls_completions__test_helper__suggests_relevant_columns_without_letters.snap
---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
snapshot_kind: text
---
***Setup***

create table users (
    id serial primary key,
    name text,
    address text,
    email text
);


--------------

s|
select |

Results:
address - public.users.address (Column)
email - public.users.email (Column)
id - public.users.id (Column)
name - public.users.name (Column)
pg_catalog.RI_FKey_cascade_del() - Schema: pg_catalog.RI_FKey_cascade_del (Function)

--------------

select n|

Results:
name - public.users.name (Column)
nameconcatoid - Schema: pg_catalog.nameconcatoid (Function)
nameeq - Schema: pg_catalog.nameeq (Function)
nameeqtext - Schema: pg_catalog.nameeqtext (Function)
namege - Schema: pg_catalog.namege (Function)

--------------

select name |
select name f|
select name from |

Results:
users - public.users (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)
_sqlx_migrations - public._sqlx_migrations (Table)

--------------

select name from u|

Results:
users - public.users (Table)
public - public (Schema)
information_schema.udt_privileges - information_schema.udt_privileges (Table)
information_schema.usage_privileges - information_schema.usage_privileges (Table)
information_schema.user_defined_types - information_schema.user_defined_types (Table)

--------------

select name from users |
