crates/pgls_completions/src/snapshots/pgls_completions__test_helper__suggests_tables_in_join.snap
---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
---
***Setup***

create schema auth;

create table auth.users (
    uid serial primary key,
    name text not null,
    email text unique not null
);

create table auth.posts (
    pid serial primary key,
    user_id int not null references auth.users(uid),
    title text not null,
    content text,
    created_at timestamp default now()
);


--------------

select * from auth.users u |
select * from auth.users u j|
select * from auth.users u join |

Results:
auth - auth (Schema)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)
auth.posts - auth.posts (Table)

--------------
