crates/pgls_completions/src/snapshots/pgls_completions__test_helper__works_in_session_authorization_statement.snap
---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
---
***Setup***

create table users (
  id serial primary key,
  email varchar,
  address text
);


--------------

s|

Results:
select - select (Keyword)
set - set (Keyword)
insert - insert (Keyword)
reset - reset (Keyword)

--------------

set |

Results:
constraints - constraints (Keyword)
names - names (Keyword)
role - role (Keyword)
schema - schema (Keyword)
session - session (Keyword)

--------------

set s|

Results:
schema - schema (Keyword)
session - session (Keyword)
constraints - constraints (Keyword)
names - names (Keyword)
transaction - transaction (Keyword)

--------------

set session |

Results:
authorization - authorization (Keyword)
characteristics - characteristics (Keyword)
names - names (Keyword)
role - role (Keyword)
schema - schema (Keyword)

--------------

set session a|

Results:
authorization - authorization (Keyword)
characteristics - characteristics (Keyword)
names - names (Keyword)
schema - schema (Keyword)

--------------

set session authorization |

Results:
anon - anon (Role)
authenticated - authenticated (Role)
owner - owner (Role)
service_role - service_role (Role)
test_login - test_login (Role)

--------------

set session authorization a|

Results:
anon - anon (Role)
authenticated - authenticated (Role)
pg_read_all_data - pg_read_all_data (Role)
pg_read_all_settings - pg_read_all_settings (Role)
pg_read_all_stats - pg_read_all_stats (Role)

--------------

set session authorization authenticated; |

Results:
create - create (Keyword)
insert - insert (Keyword)
reset - reset (Keyword)
select - select (Keyword)
set - set (Keyword)

--------------
